# vio-pipeline

./: .gitignore  CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml
configs/: configs.yaml
scripts/: install_deps.sh
src/: main.cpp
src/frontend/: frontend.cpp  frontend.h
src/frontend/detection/: detector.h  detector_factory.cpp  detector_factory.h  fast_detector.cpp  fast_detector.h
src/frontend/selection/: bucketer_selector.cpp  bucketer_selector.h  selector.h  selector_factory.cpp  selector_factory.h
src/pipeline/: vio_pipeline.cpp  vio_pipeline.h
src/sensors/: camera_reader.h  euroc_camera_reader.cpp  euroc_camera_reader.h  euroc_imu_reader.cpp  euroc_imu_reader.h  imu_reader.h
src/types/: config.cpp  config.h  frame.h  imu_sample.h  keypoint_track.h
tests/: CMakeLists.txt
tests/fixtures/configs/: valid.yaml
tests/frontend/detection/: test_detector_factory.cpp
tests/frontend/selection/: test_bucketer_selector.cpp  test_selector_factory.cpp
tests/sensors/: test_euroc_camera_reader.cpp  test_euroc_imu_reader.cpp
tests/types/: test_config.cpp
